--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorPrimaryLight">#B2A59F</color>
     <color name="colorAccent">#D81B60</color>
     <color name="blacktint">#80000000</color>
+    <color name="azure">#f1f5f8</color>
+    <color name="white">#FFFFFF</color>
 </resources>
