--- a/app/src/main/res/layout/activity_rview.xml
+++ b/app/src/main/res/layout/activity_rview.xml
@@ -1,72 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:background="#fafafa"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:padding="8dp"
-        tools:context=".Rview"
-        tools:openDrawer="start">
-
-    </LinearLayout>
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimaryDark"
-            android:id="@+id/toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:elevation="4dp"></android.support.v7.widget.Toolbar>
-
-        <Button
-            android:id="@+id/Logout"
-            android:layout_width="109dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="300dp"
-            android:text="Logout" />
-
-        <TextView
-            android:id="@+id/UserEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:layout_gravity="center_horizontal" />
-
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>
-    </LinearLayout>
-    
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="16dp"
-        android:orientation="vertical"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/drawer_menu"
-        app:headerLayout="@layout/drawer_header"></android.support.design.widget.NavigationView>
+    tools:context="com.example.darshan.miniproject.Rview"
+    >
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_id"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/rv"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
-    </android.support.v7.widget.RecyclerView>
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
