--- a/app/src/main/res/layout/activity_retrieve.xml
+++ b/app/src/main/res/layout/activity_retrieve.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Retrieve">
 
-    <ListView
-        android:id="@+id/ListView"
+    <!--<ListView-->
+        <!--android:id="@+id/ListView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"></ListView>-->
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/rv"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
