--- a/app/src/main/res/layout/activity_retrieve.xml
+++ b/app/src/main/res/layout/activity_retrieve.xml
@@ -11,11 +11,14 @@
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"></ListView>-->
 
+    <include layout="@layout/toolbar_layout"/>
+
+
     <android.support.v7.widget.RecyclerView
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:id="@+id/rv"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
