--- a/app/src/main/res/layout/activity_cover.xml
+++ b/app/src/main/res/layout/activity_cover.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".cover"
-    android:background="@drawable/coverbg"
+    android:background="@drawable/airplanebg"
     android:orientation="vertical">
 
     <LinearLayout
@@ -19,23 +19,31 @@
             android:id="@+id/v3"
             android:layout_width="match_parent"
             android:layout_height="181dp"
-            app:srcCompat="@drawable/sabletransparent" />
+            app:srcCompat="@drawable/logodd" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Welcome to SAble"
             android:textAlignment="center"
-            android:textColor="#fff"
+            android:textColor="@color/black"
             android:textSize="40sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:text="SAble is an application for products designed for user convenience and ease. It is proficient in compiling data from different websites and competently displaying it to the user on a single page. We at SAble believe in user satisfaction. #Search it!Compare it!Buy it!"
-            android:textColor="#fff"
+            android:text=""
+            android:textColor="@color/black"
             android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/adminbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="admin" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -51,7 +59,7 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/buttonstyle"
                 android:text="New User"
-                android:textColor="#fff" />
+                android:textColor="#000000" />
 
             <Button
                 android:id="@+id/existinguser"
@@ -60,7 +68,7 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/buttonstyle"
                 android:text="Existing User"
-                android:textColor="#fff" />
+                android:textColor="#000000" />
 
 
         </LinearLayout>
