--- a/app/src/main/res/layout/navigationfinal_header.xml
+++ b/app/src/main/res/layout/navigationfinal_header.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:gravity="center"
-    android:background="@color/azure">
+    android:layout_height="100dp"
+    android:background="@color/headerbg"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:orientation="vertical"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    >
 
-    <ImageView
-        android:layout_width="130dp"
-        android:layout_height="match_parent"
-        android:background="@drawable/headericon"/>
+    <!--<de.hdodenhof.circleimageview.CircleImageView-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--android:id="@+id/profile_image"-->
+        <!--android:layout_width="86dp"-->
+        <!--android:layout_height="86dp"-->
+        <!--android:src="@drawable/accounticon"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--app:civ_border_width="2dp"-->
+        <!--app:civ_border_color="#FF000000"/>-->
+
+
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:text="#Search it!Compare it!Buy it!"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
 </LinearLayout>
