--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="blacktint">#80000000</color>
     <color name="azure">#f1f5f8</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="headerbg">#018786</color>
 </resources>
