--- a/app/src/main/res/layout/activity_cover.xml
+++ b/app/src/main/res/layout/activity_cover.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".cover"
-    android:background="@drawable/airplanebg"
+    android:background="@drawable/bgsab"
     android:orientation="vertical">
 
     <LinearLayout
