--- a/app/src/main/res/layout/activity_customer_service.xml
+++ b/app/src/main/res/layout/activity_customer_service.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/airplanebg"
+    android:background="@drawable/bgsab"
     tools:context=".CustomerService">
 
     <RelativeLayout
