--- a/app/src/main/res/layout/activity_navigationfinal.xml
+++ b/app/src/main/res/layout/activity_navigationfinal.xml
@@ -6,10 +6,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="70dp"
     android:background="@drawable/recyclerviewpicture"
     tools:context=".navigationfinal">
 
-    
 
     <android.support.design.widget.NavigationView
         android:id="@+id/finalnavigationview"
@@ -18,8 +18,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/navigationfinal_header"
-        app:menu="@menu/navigationfinal_menu">
+        app:menu="@menu/navigationfinal_menu"/>
 
-    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
