--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
             android:layout_marginEnd="105dp"
             android:background="@drawable/buttonstyle"
             android:text="Login"
-            android:textColor="#fff" />
+            android:textColor="#000000" />
 
         <EditText
             android:id="@+id/emailid"
@@ -72,7 +72,7 @@
 
             android:text="Click here to Signup "
             android:textAlignment="center"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            android:textColor="@color/black" />
 
         <ImageView
             android:id="@+id/imageView2"
