--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="533dp"
             android:layout_marginEnd="105dp"
             android:background="@drawable/buttonstyle"
-            android:textColor="#fff"
+            android:textColor="#000000"
             android:text="Sign Up" />
 
         <EditText
@@ -72,7 +72,7 @@
 
             android:text="Click here to Signin "
             android:textAlignment="center"
-            android:textColor="@color/common_google_signin_btn_text_dark_default" />
+            android:textColor="@color/black" />
 
         <ImageView
             android:id="@+id/imageView"
